# personalPlanner

./: .gcloudignore  .gitignore  Dockerfile  README.md  agent.py  main.py  orchestrator_client.py  ping_agent.ipynb  prompts.py  pyproject.toml  requirements.txt  server.py  sessions.db  talk_to_deployed_agents.ipynb  temp.ipynb  verify.py
.creds/: verify.py
_time_agent/: time_agent.py
apollo_service/: .env  apollo_agent.py  manager_apollo_agent.py  test.py  test_2.py  test_3.ipynb
apollo_service/sub_agents/: apollo_agent.py  gmail_agent.py  (+2 more)
ats_jobs_service/: __init__.py  agent_ats_jobs_full.py
calendarAgent/: agent.py
calendar_service/: __init__.py  agent_calendar.py
call_service/: agent_call.py  prompts.py
gmail_service/: agent_gmail.py
google_docs_service/: agent_google_docs.py
google_drive_service/: agent_google_drive.py
google_search_service/: __init__.py  agent_google_search.py
google_sheets_service/: agent_google_sheets.py
google_slides_service/: __init__.py  agent_google_docs.py
jobs_service/: __init__.py  jobs_agent.py
matching_service/: agent_matching.py  matching.py  matching_score.py
orchestrator/: __init__.py  agent.py  agent_orchestrator.py
resume_customization/: README.md  bootstrap_tex.sh  build_resume.py  debug_regions.py  main.tex  overlay_viewer.py
resume_customization_service/: agent_resume_customization.py
services/: adk_service.py
ui/: app.py  chat_page.py  customize_page.py  outreach_page.py  streamlit_ui.py  upload_page.py  zzz_old_app.py
utils/: google_service_helpers.py  routing.py  time_utils.py
(+21 files in other folders)
